--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -76,6 +76,16 @@ span a{
     place-items: center;
 }
 /*rotating circle*/
+img.star{
+    height: 150px;
+    color: #102C57;
+    margin-right: 100px;
+}
+img.star2{
+    height: 150px;
+    color: #102C57;
+    margin-left: 100px;
+}
 .circle{
     position: relative;
     width: 500px;
@@ -137,6 +147,7 @@ span a{
     height: 100vh;
 }
 h3{
+    margin-top: 30px;
     display: flex;
     justify-content: center;
     color: #102C57;
@@ -195,7 +206,7 @@ h3{
     position: absolute;
     z-index: 1;
     width: 100%;
-    height: 190vh;
+    height: 100vh;
 }
 .bird{
     position: relative;
@@ -227,7 +238,7 @@ div.iam{
     z-index: 4;
 }
 p.head{
-    margin-top: 80px;
+    margin-top: 60px;
     color: #102C57;
     display: flex;
     justify-content: center;
@@ -237,7 +248,7 @@ p.head{
 p.b{
     padding: 60px;
     font-family: "IM Fell French Canon SC", serif;
-    font-size: 22px;
+    font-size: 25px;
 }
 .hb{
     display: flex;
@@ -246,20 +257,71 @@ p.b{
 }
 #arrow{
     color: #102C57;
-    margin-top: 85px;
+    margin-top: 70px;
     margin-left: 5px;
 }
-main{
-    display: grid;
-    grid-template-columns: auto auto auto;
-    margin-left: 145px;
+/*hobby heseg */
+#Hobby{
+    width: 100%;
+    height: 100vh; 
+    z-index: 1;
+    margin-top: 100vh;
 }
-.Apart{
-    margin-top: 109vh; 
+#Hobby h3{
+    color: #102C57;
+    padding-top: 100px;
 }
-.art img{
-    z-index: 4;
-    position: absolute;
-    height: 300px;
-    width: 300px;
+div.wrapper{
+    display: flex;
+    justify-content: space-between;
+    padding: 50px 220px 0 220px;
+    margin-top: 20px;
+}
+div.group{
+    font-size: 21px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+div.group img{
+    height: 90px;
+    color: #102C57;
+}
+/*lang&skills*/
+div.gripper{
+    display: flex;
+    justify-content: space-between;
+    padding: 70px 220px 0 220px;
+}
+h4{
+    color: #102C57;
+    font-size: 28px;
+    margin: 0 0 20px 70px;
+}
+div.grip p{
+    color: #55679C;
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    border: 4px solid #55679C;
+    border-radius: 5vh;
+    font-size: 24px;
+    padding: 12px;
+}
+p.push{
+    margin-left: 70px;
+}
+p.pull{
+    margin-right: 70px;
+}
+.footer ul{
+    display: flex;
+    justify-content: center;
+    list-style: none;
+    margin: 30px 0 30px 0;
+}
+.footer i{
+    color: #102C57;
+    font-size: 20px;
+    margin-left: 5px;
 }
